--- a/index.html
+++ b/index.html
@@ -3,33 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini E-Commerce Showcase</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>My Shop</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
+        <h1>My Shop</h1>
         <div class="top-bar">
-            <input type="text" id="search" placeholder="Search products..." onkeyup="searchProducts()">
-            <div class="cart-icon">
-                🛒 Cart (<span id="cart-count">0</span>)
+            <input type="text" id="search" placeholder="Search products...">
+            <div class="cart-info">
+                🛒 Cart: <span id="cart-count">0</span>
             </div>
         </div>
-        <nav>
-            <button class="filter-btn" data-category="all">All</button>
-            <button class="filter-btn" data-category="clothing">Clothing</button>
-            <button class="filter-btn" data-category="electronics">Electronics</button>
-            <button class="filter-btn" data-category="handicrafts">Handicrafts</button>
-        </nav>
     </header>
 
-    <main>
-        <div id="product-gallery" class="gallery"></div>
-        <div class="cart">
-            <h2>Your Cart</h2>
-            <ul id="cart-items"></ul>
-            <p>Total: $<span id="total-price">0</span></p>
-        </div>
-    </main>
+    <div class="filters">
+        <button class="filter-btn" data-category="all">All</button>
+        <button class="filter-btn" data-category="clothing">Clothing</button>
+        <button class="filter-btn" data-category="electronics">Electronics</button>
+        <button class="filter-btn" data-category="handicrafts">Handicrafts</button>
+    </div>
+
+    <div id="product-gallery" class="gallery"></div>
+
+    <div class="cart-section">
+        <h2>Shopping Cart</h2>
+        <ul id="cart-items"></ul>
+        <p>Total: ₹<span id="total-price">0</span></p>
+    </div>
 
     <!-- Modal -->
     <div id="modal" class="modal">
@@ -43,6 +44,6 @@
         </div>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
