--- a/index.html
+++ b/index.html
@@ -1,49 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Shop</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Shop</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <h1>My Shop</h1>
-        <div class="top-bar">
-            <input type="text" id="search" placeholder="Search products...">
-            <div class="cart-info">
-                🛒 Cart: <span id="cart-count">0</span>
-            </div>
-        </div>
-    </header>
 
-    <div class="filters">
-        <button class="filter-btn" data-category="all">All</button>
-        <button class="filter-btn" data-category="clothing">Clothing</button>
-        <button class="filter-btn" data-category="electronics">Electronics</button>
-        <button class="filter-btn" data-category="handicrafts">Handicrafts</button>
+  <header>
+    <h1>🛍️ My Shop</h1>
+    <input type="text" id="searchBar" placeholder="Search products...">
+    <div class="cart-icon">
+      🛒 Cart: <span id="cart-count">0</span>
     </div>
+  </header>
 
-    <div id="product-gallery" class="gallery"></div>
+  <nav class="categories">
+    <button onclick="filterProducts('all')">All</button>
+    <button onclick="filterProducts('clothing')">Clothing</button>
+    <button onclick="filterProducts('electronics')">Electronics</button>
+    <button onclick="filterProducts('handicrafts')">Handicrafts</button>
+  </nav>
 
-    <div class="cart-section">
-        <h2>Shopping Cart</h2>
-        <ul id="cart-items"></ul>
-        <p>Total: ₹<span id="total-price">0</span></p>
-    </div>
+  <main>
+    <section id="products" class="product-grid">
+      <!-- Products injected from JS -->
+    </section>
 
-    <!-- Modal -->
-    <div id="modal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <img id="modal-img" src="" alt="">
-            <h2 id="modal-name"></h2>
-            <p id="modal-desc"></p>
-            <p id="modal-price"></p>
-            <button id="modal-add-cart">Add to Cart</button>
-        </div>
-    </div>
+    <aside class="cart">
+      <h2>Shopping Cart</h2>
+      <ul id="cart-items"></ul>
+      <p>Total: ₹<span id="cart-total">0</span></p>
+    </aside>
+  </main>
 
-    <script src="script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
