--- a/index.html
+++ b/index.html
@@ -1,60 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Shop</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Shop</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>My Shop</h1>
-        <div class="top-bar">
-            <input type="text" id="search" placeholder="Search products...">
-            <div class="cart-info">
-                🛒 Cart: <span id="cart-count">0</span>
-            </div>
-        </div>
-    </header>
-
-    <!-- Add Product Form -->
-    <div class="add-product-form">
-        <h2>Add New Product</h2>
-        <input type="text" id="new-name" placeholder="Product Name">
-        <input type="text" id="new-desc" placeholder="Description">
-        <input type="text" id="new-category" placeholder="Category (e.g. clothing)">
-        <input type="number" id="new-price" placeholder="Price in ₹">
-        <input type="text" id="new-image" placeholder="Image URL">
-        <button id="add-product-btn">Add Product</button>
+  <!-- Header -->
+  <header>
+    <div class="logo">🛍 MyShop</div>
+    <div class="search-cart">
+      <input type="text" id="search" placeholder="Search products...">
+      <div class="cart-info">
+        🛒 <span id="cart-count">0</span>
+      </div>
     </div>
+  </header>
 
-    <div class="filters">
-        <button class="filter-btn" data-category="all">All</button>
-        <button class="filter-btn" data-category="clothing">Clothing</button>
-        <button class="filter-btn" data-category="electronics">Electronics</button>
-        <button class="filter-btn" data-category="handicrafts">Handicrafts</button>
+  <!-- Add Product Form -->
+  <section class="add-product-form">
+    <h2>Add Product</h2>
+    <div class="form-grid">
+      <input type="text" id="new-name" placeholder="Name">
+      <input type="text" id="new-desc" placeholder="Description">
+      <input type="text" id="new-category" placeholder="Category">
+      <input type="number" id="new-price" placeholder="Price ₹">
+      <input type="text" id="new-image" placeholder="Image URL">
     </div>
+    <button id="add-product-btn">+ Add Product</button>
+  </section>
 
-    <div id="product-gallery" class="gallery"></div>
+  <!-- Filter -->
+  <div class="filters">
+    <button class="filter-btn" data-category="all">All</button>
+    <button class="filter-btn" data-category="clothing">Clothing</button>
+    <button class="filter-btn" data-category="electronics">Electronics</button>
+    <button class="filter-btn" data-category="handicrafts">Handicrafts</button>
+  </div>
 
-    <div class="cart-section">
-        <h2>Shopping Cart</h2>
-        <ul id="cart-items"></ul>
-        <p>Total: ₹<span id="total-price">0</span></p>
+  <!-- Gallery -->
+  <main id="product-gallery" class="gallery"></main>
+
+  <!-- Cart -->
+  <aside class="cart-section">
+    <h2>Cart</h2>
+    <ul id="cart-items"></ul>
+    <p class="total">Total: ₹<span id="total-price">0</span></p>
+  </aside>
+
+  <!-- Modal -->
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <img id="modal-img" src="" alt="">
+      <h2 id="modal-name"></h2>
+      <p id="modal-desc"></p>
+      <p id="modal-price"></p>
+      <button id="modal-add-cart">Add to Cart</button>
     </div>
+  </div>
 
-    <!-- Modal -->
-    <div id="modal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <img id="modal-img" src="" alt="">
-            <h2 id="modal-name"></h2>
-            <p id="modal-desc"></p>
-            <p id="modal-price"></p>
-            <button id="modal-add-cart">Add to Cart</button>
-        </div>
-    </div>
-
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
