--- a/index.html
+++ b/index.html
@@ -3,35 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Shop</title>
+  <title>E-Commerce Store</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Header -->
-  <header>
-    <div class="logo">🛍 MyShop</div>
-    <div class="search-cart">
-      <input type="text" id="search" placeholder="Search products...">
-      <div class="cart-info">
-        🛒 <span id="cart-count">0</span>
-      </div>
+
+  <!-- Navbar -->
+  <header class="navbar">
+    <div class="left">
+      <input type="text" id="search" placeholder="Search products..." onkeyup="searchProducts()">
+    </div>
+    <div class="right">
+      <span class="cart-icon">🛒</span>
+      <span id="cart-count">0</span> items | ₹<span id="total-price">0</span>
     </div>
   </header>
 
-  <!-- Add Product Form -->
-  <section class="add-product-form">
-    <h2>Add Product</h2>
-    <div class="form-grid">
-      <input type="text" id="new-name" placeholder="Name">
-      <input type="text" id="new-desc" placeholder="Description">
-      <input type="text" id="new-category" placeholder="Category">
-      <input type="number" id="new-price" placeholder="Price ₹">
-      <input type="text" id="new-image" placeholder="Image URL">
-    </div>
-    <button id="add-product-btn">+ Add Product</button>
-  </section>
-
-  <!-- Filter -->
+  <!-- Filters -->
   <div class="filters">
     <button class="filter-btn" data-category="all">All</button>
     <button class="filter-btn" data-category="clothing">Clothing</button>
@@ -39,26 +27,13 @@
     <button class="filter-btn" data-category="handicrafts">Handicrafts</button>
   </div>
 
-  <!-- Gallery -->
-  <main id="product-gallery" class="gallery"></main>
+  <!-- Products -->
+  <div id="product-gallery" class="gallery"></div>
 
-  <!-- Cart -->
-  <aside class="cart-section">
-    <h2>Cart</h2>
+  <!-- Cart Items -->
+  <div class="cart-container">
+    <h2>Shopping Cart</h2>
     <ul id="cart-items"></ul>
-    <p class="total">Total: ₹<span id="total-price">0</span></p>
-  </aside>
-
-  <!-- Modal -->
-  <div id="modal" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <img id="modal-img" src="" alt="">
-      <h2 id="modal-name"></h2>
-      <p id="modal-desc"></p>
-      <p id="modal-price"></p>
-      <button id="modal-add-cart">Add to Cart</button>
-    </div>
   </div>
 
   <script src="script.js"></script>
