--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div class="container">
+         <!-- User greeting displayed here -->
+        <span id="userGreeting"></span>
         <!-- Header Section -->
         <header>
             <div class="header-content">
