--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <header class="top-header">
         <div class="header-container">
             <div class="logo">
-                <h1>ShopKart</h1>
+                <h1>SonyvakodeShopKart</h1>
             </div>
             
             <div class="search-bar">
