--- a/index.html
+++ b/index.html
@@ -1,9 +1,47 @@
-<!DOCTYPE html>
+<!-- Cart Modal -->
+    <div id="cartModal" class="modal">
+        <div class="modal-content cart-modal-content">
+            <span class="close" onclick="closeCartModal()">&times;</span>
+            <div class="cart-container">
+                <h2>🛒 Shopping Cart</h2>
+                <div id="cartItemsList" class="cart-items-list">
+                    <!-- Cart items will be loaded here -->
+                </div>
+                <div class="cart-summary">
+                    <div class="summary-row">
+                        <span>Subtotal:</span>
+                        <span id="cartSubtotal">₹0</span>
+                    </div>
+                    <div class="summary-row savings">
+                        <span>You Saved:</span>
+                        <span id="cartSavings">₹0</span>
+                    </div>
+                    <div class="summary-row total">
+                        <span>Total:</span>
+                        <span id="cartTotal">₹0</span>
+                    </div>
+                </div>
+                <button class="btn-checkout" onclick="proceedToCheckout()">Proceed to Checkout</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Login Modal -->
+    <div id="loginModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeLogin()">&times;</span>
+            <div class="login-container">
+                <h2>Login</h2>
+                
+                <div id="phoneStep" class="login-step">
+                    <label>Mobile Number</label>
+                    <div class="phone-input">
+                        <span class="country-code"><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sonyvakode - Online Shopping</title>
+    <title>ShopKart - Online Shopping</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -39,7 +77,7 @@
     <header class="top-header">
         <div class="header-container">
             <div class="logo">
-                <h1>SonyvakodeShopKart</h1>
+                <h1>ShopKart</h1>
             </div>
             
             <div class="search-bar">
