--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<!-- Cart Modal -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ShopKart - Online Shopping</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <!-- Cart Modal -->
     <div id="cartModal" class="modal">
         <div class="modal-content cart-modal-content">
             <span class="close" onclick="closeCartModal()">&times;</span>
@@ -26,25 +35,6 @@
         </div>
     </div>
 
-    <!-- Login Modal -->
-    <div id="loginModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeLogin()">&times;</span>
-            <div class="login-container">
-                <h2>Login</h2>
-                
-                <div id="phoneStep" class="login-step">
-                    <label>Mobile Number</label>
-                    <div class="phone-input">
-                        <span class="country-code"><!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ShopKart - Online Shopping</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
     <!-- Login Modal -->
     <div id="loginModal" class="modal">
         <div class="modal-content">
@@ -86,7 +76,7 @@
             </div>
 
             <div class="header-right">
-                <button class="icon-btn" onclick="showLogin()">
+                <button class="icon-btn" onclick="showLogin()" id="signInBtn">
                     <span>👤</span>
                     <span>Login</span>
                 </button>
